--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stratosnet/contracts",
+  "name": "@the-stratos-network/contracts",
   "version": "1.0.0",
   "description": "Stratos Contracts is a library for stos smart contract development",
   "main": "index.js",
